--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
       <li><a href="#contact">Contact Me</a></li>
     </ul>
   </nav>
-
- <!-- Hero Section -->
-<div class="hero-container">
-  <h1 class="hero-title">SHAHD BEN HMIDA</h1>
-  <p class="hero-description">My approach to frontend engineering and technical writing is simple: create with purpose, empathy, and attention to detail.</p>
+S
+ 
+ <div class="hero-container">
+  <div class="hero-content">
+      <div class="year-range">2025</div>
+      <h1 class="name">SHAHD BEN HMIDA</h1>
+      <div class="portfolio-title">Creative Developer</div>
+      <div class="categories">Frontend Developer/Full stack/Software Development/Web Design</div>
+      <div class="specialization">Turning Ideas Into Digital Reality</div>
+      <div class="cta-button">View My Work</div>
+  </div>
 </div>
 
   <section id="about" class="about">
